--- a/playground.html
+++ b/playground.html
@@ -1,31 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="/styles/index-master.css">
-</head>
-
-<body>
-    <div id="leftBox">
-        <div id="linksWrapper">
-            <div id="links">
-                <div id="logo">
-                </div>
-                <div id="logoShadow">
-                </div>
-                <!-- temp -->
-                <h6>
-                    <a class="profile-link" href="./index.html">Index</a>
-                </h6>
-            </div>
-        </div>
-    </div>
-
-    <script src="/scripts/span-animation.jsx"></script>
-</body>
-
+<html lang="en-US" class="no-js">
+	<head>
+		<link rel="stylesheet" type="text/css" href="./TEMP_DELETE/playground.css" />
+	</head>
+	<body class="page-template page-template-template-about page-template-template-about-php page page-id-13 about">
+		<menu class="main-menu">
+			<div class="main-menu__top">
+				<a class="logo" rel="home" href="#">
+					<svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="60.000000pt" height="72.000000pt" viewBox="0 0 53.000000 72.000000" preserveAspectRatio="xMidYMid meet">
+						<metadata>Created by potrace 1.16, written by Peter Selinger 2001-2019</metadata>
+						<g transform="translate(-9,72.000000) scale(0.100000,-0.100000)" fill="#05fdd8" stroke="none">
+							<path
+								d="M380 442 c0 -318 -1 -322 -71 -322 -61 0 -89 40 -89 126 l0 45 -67
+                                -3 -68 -3 3 -69 c6 -158 87 -225 256 -214 80 5 134 38 165 100 20 42 21 59 21
+                                331 l0 287 -75 0 -75 0 0 -278z" />
+						</g>
+						<g transform="translate(0.000000,72.000000) scale(0.100000,-0.100000)" fill="#fd2155" stroke="none">
+							<path
+								d="M380 442 c0 -318 -1 -322 -71 -322 -61 0 -89 40 -89 126 l0 45 -67
+                                -3 -68 -3 3 -69 c6 -158 87 -225 256 -214 80 5 134 38 165 100 20 42 21 59 21
+                                331 l0 287 -75 0 -75 0 0 -278z" />
+						</g>
+					</svg>
+					<span>asd</span>
+				</a>
+				<span>dfsgfgds</span>
+			</div>
+			<nav class="main-menu_nav">
+				<a rel="about" href="#">About</a>
+				<a rel="skills" href="#">My Skills</a>
+				<a rel="work" href="#">Work</a>
+				<a rel="contact" href="#">Contact</a>
+				<a style="color: #08fdd8" href="#">Blog</a>
+			</nav>
+			<ul class="social">
+				<li>
+					<a href="https://pl.linkedin.com/pub/jacek-jeznach/40/9b6/a9" target="_blank">
+						<svg viewBox="0 0 448 512" class="svg-inline--fa fa-linkedin-in fa-w-14 fa-5x">
+							<path
+								fill="currentColor"
+								d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"
+								class=""></path>
+						</svg>
+					</a>
+				</li>
+				<li>
+					<a href="https://github.com/jeznacki/" target="_blank">
+						<svg viewBox="0 0 496 512" class="svg-inline--fa fa-github fa-w-16 fa-3x">
+							<path
+								fill="currentColor"
+								d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
+								class=""></path>
+						</svg>
+					</a>
+				</li>
+				<li>
+					<a href="https://www.youtube.com/channel/UCqa84f7r4QIYKV7EVgoVwgQ" target="_blank">
+						<svg viewBox="0 0 448 512" class="svg-inline--fa fa-youtube-square fa-w-14 fa-5x">
+							<path
+								fill="currentColor"
+								d="M186.8 202.1l95.2 54.1-95.2 54.1V202.1zM448 80v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48zm-42 176.3s0-59.6-7.6-88.2c-4.2-15.8-16.5-28.2-32.2-32.4C337.9 128 224 128 224 128s-113.9 0-142.2 7.7c-15.7 4.2-28 16.6-32.2 32.4-7.6 28.5-7.6 88.2-7.6 88.2s0 59.6 7.6 88.2c4.2 15.8 16.5 27.7 32.2 31.9C110.1 384 224 384 224 384s113.9 0 142.2-7.7c15.7-4.2 28-16.1 32.2-31.9 7.6-28.5 7.6-88.1 7.6-88.1z"
+								class=""></path>
+						</svg>
+					</a>
+				</li>
+			</ul>
+		</menu>
+	</body>
 </html>
