reworked CSS // JS
swapped myWork grid from JS to CSS, adding an event listener on window resize.

--- a/inspiration.html
+++ b/inspiration.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="/styles/myWork.css" />
 	</head>
 
-	<body>
+	<body onload="childFunc()">
 		<menu class="leftBox">
         <div class="linksWrapper">
             <a class="logo" rel="home">
@@ -71,13 +71,13 @@
         </ul>
     </menu>
 		<div id="centerBox">
-            <div id="child"></div>
-            <div id="child"></div>
-            <div id="child"></div>
-            <div id="child"></div>
+            <div id="child"><img src=""></div>
+            <div id="child"><img src=""></div>
+            <div id="child"><img src=""></div>
+            <div id="child"><img src=""></div>
+            <div id="child"><img src=""></div>
         </div>
 		<div class="bg"></div>
-        <!-- <script src="myScript.js"></script> -->
         <script src="./scripts/childNth.js"></script>
 	</body>
     
