Updated portfolio w/ playground
playground included

--- a/myWork.html
+++ b/myWork.html
@@ -5,22 +5,13 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
-		<link rel="stylesheet" type="text/css" href="/styles/index-master.css" />
+		<link rel="stylesheet" type="text/css" href="./styles/index-master.css">
 		<link rel="stylesheet" type="text/css" href="/styles/myWork.css" />
 	</head>
 
 	<body onload="windowSize()" onresize="windowSize()">
-		<!-- <body onload="mathFunc()"> -->
 		<div class="scroll">
-			<!-- <menu class="topBox">
-				<div class="linksWrapper">
-					<a class="logo" rel="home">
-						<div></div>
-						<span>Nickolaus</span>
-					</a>
-				</div>
-			</menu> -->
-			<menu class="leftBox">
+		    <menu class="leftBox">
                 <div class="linksWrapper">
                     <a class="logo" rel="home">
                         <div></div>
