--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learning Everyday | NJ</title>
-    <link rel="stylesheet" type="text/css" href="/styles/index-master.css">
+    <link rel="stylesheet" type="text/css" href="./styles/index-master.css">
     
 </head>
 
@@ -86,7 +86,7 @@
         <ul class="ul-image">
             <li>
                 <div class="image">
-                    <img src="/images/logo-2582748_1280.png">
+                    <img src="https://unsplash.it/300/200?image=593">
                 </div>
                 <div class="shadow"></div>
             </li>
