--- a/playground.html
+++ b/playground.html
@@ -14,113 +14,13 @@
 
 	<body>
 		<div w3-include-html="/src/Injections/test-inject.html"></div>
-		<!-- <menu class="leftBox">
-            <div class="linksWrapper">
-                <a class="logo" rel="home">
-                    <div></div>
-                    <span>Nickolaus</span>
-                </a>
-                <div class="title">
-                    <div class="titleWrapper">
-                        <p class="titleItem">
-                            <div class="slider">
-                                <div>Web Developer</div>
-                                <div>UI/UX Designer</div>
-                                <div>SEO</div>
-                                <div>Front End Developer</div>
-                                <div>Software Engineer</div>
-                                <div>Back End Developer</div>
-                                <div>Content Manager</div>
-                                <div>Web Developer</div>
-                            </div>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <nav class="leftBox_nav">
-                <a class="aboutMe" href="./index.html">About Me</a>
-                <a class="skills" href="./skills.html">Skills</a>
-                <a class="myWork" href="./myWork.html">My Work</a>
-                <a class="contact" href="./contact.html">Contact</a>
-                <a class="inspiration" href="./inspiration.html">Portfolio Inspiration</a>
-                <a class="playground current-page" href="./playground.html">Playground</a>
-            </nav>
-
-            <ul class="social">
-                <li>
-                    <a class="linkedin" href="https://www.linkedin.com/in/nickolaus-janak/">
-                        <svg class="linkedinSVG" viewBox="-150 242 310 310">
-                            <path d="M-77.8,341.7h-62.2c-2.8,0-5,2.2-5,5v199.9c0,2.8,2.2,5,5,5h62.2c2.8,0,5-2.2,5-5V346.7
-                                C-72.8,344-75.1,341.7-77.8,341.7z"/>
-                            <path d="M-108.9,242.3c-22.6,0-41.1,18.4-41.1,41c0,22.6,18.4,41,41.1,41c22.6,0,41-18.4,41-41
-                                C-67.9,260.7-86.3,242.3-108.9,242.3z"/>
-                            <path d="M80.5,336.8c-25,0-43.5,10.7-54.7,23v-13c0-2.8-2.2-5-5-5h-59.6c-2.8,0-5,2.2-5,5v199.9
-                                c0,2.8,2.2,5,5,5h62.1c2.8,0,5-2.2,5-5v-98.9c0-33.3,9.1-46.3,32.3-46.3c25.3,0,27.3,20.8,27.3,48v97.2c0,2.8,2.2,5,5,5H155
-                                c2.8,0,5-2.2,5-5V437C160,387.4,150.5,336.8,80.5,336.8z"/>
-                        </svg>
-                    </a>
-                </li>
-                <li>
-                    <a class="github" href="https://github.com/Klous-jan">
-                        <svg class="githubSVG" viewBox="-289 381 32 32">
-                            <path d="M-273,381.4c-8.8,0-16,7.2-16,16c0,7.1,4.6,13.1,10.9,15.2c0.8,0.2,1.1-0.3,1.1-0.8c0-0.4,0-1.4,0-2.7
-                            c-4.5,1-5.4-2.2-5.4-2.2c-0.7-1.8-1.8-2.3-1.8-2.3c-1.4-1,0.1-1,0.1-1c1.6,0.1,2.4,1.6,2.4,1.6c1.4,2.4,3.7,1.7,4.7,1.3
-                            c0.1-1,0.6-1.7,1-2.1c-3.6-0.4-7.3-1.8-7.3-7.9c0-1.8,0.6-3.2,1.6-4.3c-0.2-0.4-0.7-2,0.1-4.2c0,0,1.3-0.4,4.4,1.6
-                            c1.3-0.4,2.6-0.5,4-0.5c1.4,0,2.7,0.2,4,0.5c3-2.1,4.4-1.6,4.4-1.6c0.9,2.2,0.3,3.8,0.2,4.2c1,1.1,1.6,2.5,1.6,4.3
-                            c0,6.1-3.7,7.5-7.3,7.9c0.6,0.5,1.1,1.5,1.1,3c0,2.1,0,3.9,0,4.4c0,0.4,0.3,0.9,1.1,0.8c6.4-2.1,11-8.1,11-15.2
-                            C-257,388.6-264.2,381.4-273,381.4L-273,381.4z"/>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
-        </menu> -->
-		<!-- <div id="centerBox">
-			<div>
-				<header>
-					<h2 class="nameArea">Stay Awhile and Listen</h2>
-				</header>
-				<p class="aboutArea">
-					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam optio, quos ab beatae veritatis eius tempore earum accusamus praesentium hic dolorem fugiat, nobis, consequatur
-					dicta doloribus. Praesentium quae rem vitae.
-				</p>
-				<p class="aboutArea">
-					Lorem ipsum dolor Eveniet cum totam vitae, ex nihil maxime, possimus provident in cumque eius sit amet consectetur adipisicing elit. inventore facilis? Incidunt asperiores tempore
-					magnam praesentium quidem, possimus voluptates!
-				</p>
-				<p class="aboutArea">
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos itaque expedita voluptates quas, qui a culpa adipisci ratione nobis! Debitis eos, eum quis corporis aspernatur
-					alias iste libero modi sed!
-				</p>
-				<p><a class="aboutAreaContact" href="./contact.html">Let talk more!</a></p>
-			</div>
-		</div> -->
-		<!-- <div id="centerBox">
-			<div>
-				<header>
-					<h2 class="nameArea">Stay Awhile and Listen</h2>
-				</header>
-				<p class="aboutArea">
-					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam optio, quos ab beatae veritatis eius tempore earum accusamus praesentium hic dolorem fugiat, nobis, consequatur
-					dicta doloribus. Praesentium quae rem vitae.
-				</p>
-				<p class="aboutArea">
-					Lorem ipsum dolor Eveniet cum totam vitae, ex nihil maxime, possimus provident in cumque eius sit amet consectetur adipisicing elit. inventore facilis? Incidunt asperiores tempore
-					magnam praesentium quidem, possimus voluptates!
-				</p>
-				<p class="aboutArea">
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos itaque expedita voluptates quas, qui a culpa adipisci ratione nobis! Debitis eos, eum quis corporis aspernatur
-					alias iste libero modi sed!
-				</p>
-				<p><a class="aboutAreaContact" href="./contact.html">Let talk more!</a></p>
-			</div>
-		</div> -->
 		<div class="scene">
 			<div class="leftBar previous-button"></div>
-			<div class="carousel">
+			<div class="carousel" id="carousel-top">
 				<div class="carousel__cell">
 					<div class="card-body">
 						<div class="card-groups">
-							<div class="card-group" data-index="0" id="cgz">
+							<div class="card-group" id="cgi">
 								<div class="little-card card"></div>
 								<div class="big-card card"></div>
 								<div class="little-card card"></div>
@@ -136,7 +36,7 @@
 				<div class="carousel__cell">
 					<div class="card-body">
 						<div class="card-groups">
-							<div class="card-group" data-index="1" id="cgi">
+							<div class="card-group" id="cgii">
 								<div class="little-card card"></div>
 								<div class="big-card card"></div>
 								<div class="little-card card"></div>
@@ -152,7 +52,7 @@
 				<div class="carousel__cell">
 					<div class="card-body">
 						<div class="card-groups">
-							<div class="card-group" data-index="2" id="cgii">
+							<div class="card-group" hidden="" id="cgiii">
 								<div class="little-card card"></div>
 								<div class="big-card card"></div>
 								<div class="little-card card"></div>
@@ -168,7 +68,7 @@
 				<div class="carousel__cell">
 					<div class="card-body">
 						<div class="card-groups">
-							<div class="card-group" data-index="3" id="cgiii">
+							<div class="card-group" hidden="" id="cgiv">
 								<div class="little-card card"></div>
 								<div class="big-card card"></div>
 								<div class="little-card card"></div>
@@ -184,7 +84,7 @@
 				<div class="carousel__cell">
 					<div class="card-body">
 						<div class="card-groups">
-							<div class="card-group" data-index="4" id="cgiv">
+							<div class="card-group" id="cgv">
 								<div class="little-card card"></div>
 								<div class="big-card card"></div>
 								<div class="little-card card"></div>
@@ -201,62 +101,6 @@
 			<div class="block"></div>
 			<div class="rightBar next-button"></div>
 		</div>
-		<!-- <div id="rightBox">
-			<div class="card-body">
-				<div class="card-swiper">
-					<div class="card-groups">
-						<div class="card-group" data-index="0" data-status="active">
-							<div class="little-card card"></div>
-							<div class="big-card card"></div>
-							<div class="little-card card"></div>
-							<div class="big-card card"></div>
-							<div class="little-card card"></div>
-							<div class="big-card card"></div>
-							<div class="little-card card"></div>
-							<div class="big-card card"></div>
-						</div>
-						<div class="card-group" data-index="1" data-status="unknown">
-							<div class="little-card card"></div>
-							<div class="big-card card"></div>
-							<div class="little-card card"></div>
-							<div class="big-card card"></div>
-							<div class="little-card card"></div>
-							<div class="big-card card"></div>
-							<div class="little-card card"></div>
-							<div class="big-card card"></div>
-						</div>
-						<div class="card-group" data-index="2" data-status="unknown">
-							<div class="little-card card"></div>
-							<div class="big-card card"></div>
-							<div class="little-card card"></div>
-							<div class="big-card card"></div>
-							<div class="little-card card"></div>
-							<div class="big-card card"></div>
-							<div class="little-card card"></div>
-							<div class="big-card card"></div>
-						</div>
-					</div>
-					<div class="card-swiper-buttons">
-						<button id="hate-button" onclick="handleHateClick()">
-							<i class="fa-solid fa-x"></i>
-						</button>
-						<button id="love-button" onclick="handleLoveClick()">
-							<i class="fa-solid fa-heart"></i>
-						</button>
-					</div>
-				</div>
-			</div>
-			<div class="maincontainer">
-				<div class="card-flip" id="card-flip" onclick="flipCard()">
-					<div class="front" onclick="flipCard()">
-						<h1>front</h1>
-					</div>
-					<div class="back" onclick="flipCard()">
-						<h1>back</h1>
-					</div>
-				</div>
-			</div>
-		</div> -->
 		<div class="bg"></div>
 		<script src="/scripts/cards.js"></script>
 		<script>
