--- a/myWork.html
+++ b/myWork.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Portfolio Projects</title>
 		<link rel="stylesheet" type="text/css" href="./styles/index-master.css">
 		<link rel="stylesheet" type="text/css" href="/styles/myWork.css" />
 	</head>
@@ -76,7 +76,7 @@
             </menu>
 			<div class="grid" id="grid">
 				<div class="child" id="Notflix"><img src="/images/Notflix_logo_Res_64.png" id="image" />
-                    <a href="">
+                    <a href="https://klous-jan.github.io/Notflicks/src/main.html">
                         <span class="link-spanner"></span>
                     </a>
                 </div>
