--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
             <header>
                 <h1 class="nameArea">Stay Awhile and Listen</h1>
             </header>
-            <p class="aboutArea">My name is Nickolaus Janak and welcome to my portfolio. My love for technology started around the age of 10 when my best friends father who did IT work began teaching me how computers worked both inside and out. From that point forward my spark of curiosity continued to grew.</p>
+            <h3 class="aboutArea">My name is Nickolaus Janak and welcome to my portfolio.</h3>
+            <p class="aboutArea">My love for technology started around the age of 10 when my best friends father who did IT work began teaching me how computers worked both inside and out. From that point forward my spark of curiosity continued to grew.</p>
             <p class="aboutArea">Throughout the early years of Myspace and Newgrounds I began learning the ins and outs of HTML, CSS, Animation, Photoshop, and even video editing. I loved creating something from nothing, animating still boring stick figures into intense action fight scenes, and as my creativity and skills grew so did my spark of curiosity.</p>
             <p class="aboutArea"></p>
             <p class="aboutArea">When Covid happened, I utilized my time and attended The Tech Academy, a coding bootcamp that would help round off my skills, teach me better coding practices, and open me up to other languages and frameworks like SQL, React, JSON, Node and many others. The knowledge I gained from The Tech Academy opened many doors of creativity, and thus my spark of curiosity only grew bigger. </p>
@@ -86,7 +87,7 @@
         </div>
     </div>
     <div id="rightBox">
-        <ul class="ul-image">
+        <!-- <ul class="ul-image">
             <li>
                 <div class="image">
                     <img src="https://unsplash.it/300/200?image=593">
@@ -105,7 +106,7 @@
                 </div>
                 <div class="shadow"></div>
             </li>
-        </ul>
+        </ul> -->
     </div>
     <div class="bg"></div>
     
