--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,6 @@
                 <a class="skills" href="./skills.html">Skills</a>
                 <a class="myWork" href="./myWork.html">My Work</a>
                 <a class="contact" href="./contact.html">Contact</a>
-                <a class="inspiration" href="./inspiration.html">Portfolio Inspiration</a>
                 <a class="resume current-page" href="./resume.html">Resume</a>
                 <a class="playground" href="./playground.html">Playground</a>
             </nav>
@@ -122,7 +121,7 @@
                     <hr>
                     <section id="experiance">
                         <h2>Experience</h2>
-                        <p>I’ve worked on a handful of web projects over the years, some offul of web projects over the years, some offul of web projects over the years, some offul of web projects over the years, some of which were for the following organizations:</p>
+                        <p>I’ve worked on a handful of web projects over the years, [--NAN--  --NAN-- --NAN-- --NAN-- --NAN-- --NAN-- --NAN-- --NAN-- --NAN-- --NAN-- --NAN-- --NAN-- --NAN-- --NAN--]  some of which were for the following organizations:</p>
                         <ul id="companies">
                             <li class="company">
                                 <header>
