--- a/skills.html
+++ b/skills.html
@@ -87,12 +87,12 @@
         <div class="void" id="void">
             <div class="crop">
                 <ul id="card-list" style="--count: 5;">
-                    <!-- <li class="cards-all"><div class="card"><span class="model-name">Vanilla JavaScript</span><span class="model-disc"></span></a></div></li> -->
-                    <li class="cards-all"><div class="card"><span class="model-name">React</span><span class="model-disc">React was one of my first libraries I learned to utilize and it has made my life so much easier.</span></a></div></li>
-                    <li class="cards-all"><div class="card"><span class="model-name">Node.js</span><span class="model-disc">Node is one of my go-to frameworks when building my backend and handling requests from the browser</span></a></div></li>
-                    <li class="cards-all"><div class="card"><span class="model-name">SQL</span><span class="model-disc">Ive always enjoyed working with large datasets, I was lucky enough to get a lot of hands on experiance using SQL early in my career</span></a></div></li>
-                    <li class="cards-all"><div class="card"><span class="model-name">Python</span><span class="model-disc">I use Python to automate tasks and build applications. This was one of the first programing languages that got me interested in becoming a developer</span></a></div></li>
-                    <li class="cards-all"><div class="card"><span class="model-name">Photoshop / Premiere Pro</span><span class="model-disc">This is where I get to utilize my artistic side, i have been designing and editing with Photoshop and Premiere Pro for over 10 years.</span></a></div></li>
+                    <!-- <li class="cards-all"><div class="card"><span class="model-name">Vanilla JavaScript</span><span></span></a></div></li> -->
+                    <li class="cards-all"><div class="card"><span class="model-name">React</span><span>React was one of my first libraries I learned to utilize and it has made my life so much easier.</span></a></div></li>
+                    <li class="cards-all"><div class="card"><span class="model-name">Node.js</span><span>Node is one of my go-to frameworks when building my backend and handling requests from the browser</span></a></div></li>
+                    <li class="cards-all"><div class="card"><span class="model-name">SQL</span><span>Ive always enjoyed working with large datasets, I was lucky enough to get a lot of hands on experiance using SQL early in my career</span></a></div></li>
+                    <li class="cards-all"><div class="card"><span class="model-name">Python</span><span>I use Python to automate tasks and build applications. This was one of the first programing languages that got me interested in becoming a developer</span></a></div></li>
+                    <li class="cards-all"><div class="card"><span class="model-name">Photoshop / Premiere Pro</span><span>This is where I get to utilize my artistic side, i have been designing and editing with Photoshop and Premiere Pro for over 10 years.</span></a></div></li>
                 </ul>
                 <div class="last-circle"></div>
                 <div class="second-circle"></div>
