--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
     <link rel="stylesheet" type="text/css" href="./styles/index-master.css">
+    <link rel="stylesheet" type="text/css" href="./styles/skills-rotate.css">
     
 </head>
 
@@ -79,33 +80,38 @@
             <h3 class="aboutArea">My name is Nickolaus Janak and welcome to my portfolio.</h3>
             <p class="aboutArea">My love for technology started around the age of 10 when my best friends father who did IT work began teaching me how computers worked both inside and out. From that point forward my spark of curiosity continued to grew.</p>
             <p class="aboutArea">Throughout the early years of Myspace and Newgrounds I began learning the ins and outs of HTML, CSS, Animation, Photoshop, and even video editing. I loved creating something from nothing, animating still boring stick figures into intense action fight scenes, and as my creativity and skills grew so did my spark of curiosity.</p>
-            <p class="aboutArea"></p>
             <p class="aboutArea">When Covid happened, I utilized my time and attended The Tech Academy, a coding bootcamp that would help round off my skills, teach me better coding practices, and open me up to other languages and frameworks like SQL, React, JSON, Node and many others. The knowledge I gained from The Tech Academy opened many doors of creativity, and thus my spark of curiosity only grew bigger. </p>
             <p class="aboutArea">As of today I continue to learn because I will never know everything. I continue to create, because there will always be a nothing to create into something. I continue to challenge myself, because there will always be ways to improve. And I will continue to follow my curiosity to see how big it can truly grow. </p>
             <h2><a class="aboutAreaContact" href="./contact.html">Let talk more!</a></h2>
         </div>
     </div>
     <div id="rightBox">
-        <!-- <ul class="ul-image">
-            <li>
-                <div class="image">
-                    <img src="https://unsplash.it/300/200?image=593">
-                </div>
-                <div class="shadow"></div>
-            </li>
-            <li>
-                <div class="image">
-                    <img src="https://unsplash.it/300/200?image=593">
-                </div>
-                <div class="shadow"></div>
-            </li>
-            <li>
-                <div class="image">
-                    <img src="https://unsplash.it/300/200?image=433">
-                </div>
-                <div class="shadow"></div>
-            </li>
-        </ul> -->
+        <div class="void" id="void">
+            <div class="crop">
+                <ul id="card-list" style="--count: 10;">
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="/images/rotate/BabyMe.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="/images/rotate/FamilyPic.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="/images/rotate/FlashlightHead.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="/images/rotate/GrandpaMeAndDad.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="/images/rotate/MeAndDozer.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="/images/rotate/MeAndMom.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="/images/rotate/MeAndMomWedding.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="/images/rotate/MochiSleeping.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="/images/rotate/StPaddysDay.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="/images/rotate/Veritasium.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <!-- <li class="cards-all"><div class="card"><span class="model-name">Vanilla JavaScript</span><span></span></a></div></li> -->
+                    <!-- <li class="cards-all"><div class="card"><span class="model-name">React</span><span>React was one of my first libraries I learned to utilize and it has made my life so much easier.</span></a></div></li> -->
+                    <!-- <li class="cards-all"><div class="card"><span class="model-name">Node.js</span><span>Node is one of my go-to frameworks when building my backend and handling requests from the browser</span></a></div></li> -->
+                    <!-- <li class="cards-all"><div class="card"><span class="model-name">SQL</span><span>Ive always enjoyed working with large datasets, I was lucky enough to get a lot of hands on experiance using SQL early in my career</span></a></div></li> -->
+                    <!-- <li class="cards-all"><div class="card"><span class="model-name">Python</span><span>I use Python to automate tasks and build applications. This was one of the first programing languages that got me interested in becoming a developer</span></a></div></li> -->
+                    <!-- <li class="cards-all"><div class="card"><span class="model-name">Photoshop / Premiere Pro</span><span>This is where I get to utilize my artistic side, i have been designing and editing with Photoshop and Premiere Pro for over 10 years.</span></a></div></li> -->
+                </ul>
+                <div class="last-circle"></div>
+                <div class="second-circle"></div>
+                <div class="center-circle"></div>
+            </div>
+            <div class="mask"></div>
+        </div>
     </div>
     <div class="bg"></div>
     
