--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
                 <h2 class="nameArea nameAreaContact contactBottom">something together.</h2>
             </header>
             <div class="container">
-                <form action="/action_page.php">
+                <form action="https://formspree.io/f/mqkvevbw" method="POST">
                     <div>
                         <!-- <label class="labelText" for="cName">Company Name</label> -->
                         <input
