--- a/contact.html
+++ b/contact.html
@@ -35,11 +35,9 @@
         </div>
         <nav class="leftBox_nav">
             <a class="aboutMe" href="./index.html">About Me</a>
-            <a class="skills" href="./skills.html">Skills</a>
             <a class="myWork" href="./myWork.html">My Work</a>
             <a class="contact current-page" href="./contact.html">Contact</a>
             <a class="resume" href="./resume.html">Resume</a>
-            <a class="playground" href="./playground.html">Playground</a>
         </nav>
 
         <ul class="social">
@@ -135,6 +133,7 @@
                             class="numInput inputField inDec"
                             name="contactNumber"
                             placeholder="*Contact Number"
+                            maxlength="12"
                             required>
                         
                         <!-- <label class="labelText" for="cExt">Extension</label> -->
@@ -148,7 +147,7 @@
                     </div>
                     <!-- <label class="labelText" for="cLoc">Company Location</label> -->
                     <select id="cLoc" class="inDec" name="country">
-                        <option value="Company Location" hidden disabled selected required>Where is your company located?</option>
+                        <option value="CompanyLocation" hidden disabled selected required>*Where is your company located?</option>
                         <option value="australia">Australia</option>
                         <option value="canada">Canada</option>
                         <option value="usa">USA</option>
@@ -161,7 +160,25 @@
             </div>
         </div>
     </div>
+    <div id="rightBox">
+        <div id="contact-wrapper">
+            <!-- <div class="icon">
+                <svg fill="#000000" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <path d="M174.545,302.545H81.455c-6.982,0-11.636,4.655-11.636,11.636s4.655,11.636,11.636,11.636h93.091 c6.982,0,11.636-4.655,11.636-11.636S181.527,302.545,174.545,302.545z"></path> </g> </g> <g> <g> <path d="M139.636,244.364H46.545c-6.982,0-11.636,4.655-11.636,11.636s4.655,11.636,11.636,11.636h93.091 c6.982,0,11.636-4.655,11.636-11.636S146.618,244.364,139.636,244.364z"></path> </g> </g> <g> <g> <path d="M104.727,186.182H11.636C4.655,186.182,0,190.836,0,197.818s4.655,11.636,11.636,11.636h93.091 c6.982,0,11.636-4.655,11.636-11.636S111.709,186.182,104.727,186.182z"></path> </g> </g> <g> <g> <path d="M463.127,155.927c-3.491-4.655-11.636-5.818-16.291-2.327l-123.345,94.255c-12.8,9.309-30.255,9.309-43.055,0 L157.091,153.6c-4.655-3.491-12.8-3.491-16.291,2.327c-3.491,4.655-3.491,12.8,2.327,16.291l124.509,94.255 c10.473,8.145,23.273,11.636,34.909,11.636s25.6-3.491,34.909-11.636L460.8,172.218 C465.455,168.727,466.618,160.582,463.127,155.927z"></path> </g> </g> <g> <g> <path d="M477.091,104.727H104.727c-6.982,0-11.636,4.655-11.636,11.636S97.745,128,104.727,128h372.364 c6.982,0,11.636,4.655,11.636,11.636v232.727c0,6.982-4.655,11.636-11.636,11.636H104.727c-6.982,0-11.636,4.655-11.636,11.636 c0,6.982,4.655,11.636,11.636,11.636h372.364c19.782,0,34.909-15.127,34.909-34.909V139.636 C512,119.855,496.873,104.727,477.091,104.727z"></path> </g> </g> <g> <g> <path d="M461.964,340.945l-69.818-69.818c-4.655-4.655-11.636-4.655-16.291,0s-4.655,11.636,0,16.291l69.818,69.818 c2.327,2.327,5.818,3.491,8.145,3.491s5.818-1.164,8.146-3.491C466.618,352.582,466.618,345.6,461.964,340.945z"></path> </g> </g> </g></svg>
+            </div> -->
+            <h2 class="right-contact head-contact">Email</h2>
+            <h3 class="right-contact link-contact">nickolaus.janak@gmail.com</h3>
+            <hr/>
+            <h2 class="right-contact head-contact">Linkedin</h2>
+            <h3 class="right-contact link-contact">linkedin.com/in/nickolaus-janak</h3>
+            <hr/>
+            <h2 class="right-contact head-contact">Github</h2>
+            <h3 class="right-contact link-contact">github.com/Klous-jan</h3>
+            <hr/>
+
+        </div>
+    </div>
     <div class="bg"></div>
+    <script src="./scripts/tele.js"></script>
 </body>
 
 </html>
