--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <a class="myWork" href="./myWork.html">My Work</a>
             <a class="contact" href="./contact.html">Contact</a>
             <a class="resume" href="./resume.html">Resume</a>
+            <a class="resume" href="./playground.html">Playground</a>
         </nav>
 
         <ul class="social">
@@ -70,6 +71,7 @@
             </li>
         </ul>
     </menu>
+    <div w3-include-html="/src/include/leftBox-mobile.html"></div>
     <div id="centerBox">
         <div>
             <header>
