--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Nickolaus Janak Resume</title>
 		<link rel="stylesheet" type="text/css" href="./styles/index-master.css" />
-		<link rel="stylesheet" type="text/css" href="styles/resume.css" />
+		<link rel="stylesheet" type="text/css" href="./styles/resume.css" />
 	</head>
 
 	<body>
@@ -70,45 +70,43 @@
         </menu>
         <div class="main_container">
             <div class="outer_container">
-                <!-- <div class="fixedContainer"> -->
-                    <div class="left_container">
-                        <div class="leftHeadInfo">
-                            <ul class="headInfo-list">
-                                <li><h3 class="headtitleList">klous-jan.github.io</h3></li>
-                                <li><h3 class="headtitleList">Seattle, WA</h3></li>
-                                <li><h3 class="headtitleList">nickolaus.janak@gmail.com</h3></li>
+                <div class="left_container">
+                    <div class="leftHeadInfo">
+                        <ul class="headInfo-list">
+                            <li><h3 class="headtitleList">klous-jan.github.io</h3></li>
+                            <li><h3 class="headtitleList">Seattle, WA</h3></li>
+                            <li><h3 class="headtitleList">nickolaus.janak@gmail.com</h3></li>
+                        </ul>
+                    </div>
+                    <div class="leftSkillsInfo">
+                        <ul class="skill-headers">
+                            <li><h3 class="titleList">Core Skills</h3></li>
+                            <ul class="skill-lists">
+                                <li><h4 class="titleInfo firstInfo">JavaScript</h4></li>
+                                <li><h4 class="titleInfo">React</h4></li>
+                                <li><h4 class="titleInfo">CSS</h4></li>
+                                <li><h4 class="titleInfo">SASS</h4></li>
+                                <li><h4 class="titleInfo">Node.js</h4></li>
+                                <li><h4 class="titleInfo">SQL</h4></li>
+                                <li><h4 class="titleInfo">Python</h4></li>
+                                <li><h4 class="titleInfo">C#</h4></li>
+                                <li><h4 class="titleInfo">Bootstrap</h4></li>
+                                <li><h4 class="titleInfo">Kotlin</h4></li>
                             </ul>
-                        </div>
-                        <div class="leftSkillsInfo">
-                            <ul class="skill-headers">
-                                <li><h3 class="titleList">Core Skills</h3></li>
-                                <ul class="skill-lists">
-                                    <li><h4 class="titleInfo firstInfo">JavaScript</h4></li>
-                                    <li><h4 class="titleInfo">React</h4></li>
-                                    <li><h4 class="titleInfo">CSS</h4></li>
-                                    <li><h4 class="titleInfo">SASS</h4></li>
-                                    <li><h4 class="titleInfo">Node.js</h4></li>
-                                    <li><h4 class="titleInfo">SQL</h4></li>
-                                    <li><h4 class="titleInfo">Python</h4></li>
-                                    <li><h4 class="titleInfo">C#</h4></li>
-                                    <li><h4 class="titleInfo">Bootstrap</h4></li>
-                                    <li><h4 class="titleInfo">Kotlin</h4></li>
-                                </ul>
-                                <li><h3 class="titleList secondSkills">klous-jan.github.io</h3></li>
-                                <ul class="skill-lists">
-                                    <li><h4 class="titleInfo firstInfo">Adobe Photoshop</h4></li>
-                                    <li><h4 class="titleInfo">Adobe Premiere Pro</h4></li>
-                                    <li><h4 class="titleInfo">Blender</h4></li>
-                                    <li><h4 class="titleInfo">Figma</h4></li>
-                                    <li><h4 class="titleInfo">Software Testing</h4></li>
-                                    <li><h4 class="titleInfo">SEO Anlysis</h4></li>
-                                    <li><h4 class="titleInfo">Responsive Web Design</h4></li>
-                                    <li><h4 class="titleInfo">Design Systems</h4></li>
-                                    <li><h4 class="titleInfo">Unity Engine</h4></li>
-                                </ul>
+                            <li><h3 class="titleList secondSkills">klous-jan.github.io</h3></li>
+                            <ul class="skill-lists">
+                                <li><h4 class="titleInfo firstInfo">Adobe Photoshop</h4></li>
+                                <li><h4 class="titleInfo">Adobe Premiere Pro</h4></li>
+                                <li><h4 class="titleInfo">Blender</h4></li>
+                                <li><h4 class="titleInfo">Figma</h4></li>
+                                <li><h4 class="titleInfo">Software Testing</h4></li>
+                                <li><h4 class="titleInfo">SEO Anlysis</h4></li>
+                                <li><h4 class="titleInfo">Responsive Web Design</h4></li>
+                                <li><h4 class="titleInfo">Design Systems</h4></li>
+                                <li><h4 class="titleInfo">Unity Engine</h4></li>
                             </ul>
-                        </div>
-                    <!-- </div> -->
+                        </ul>
+                    </div>
                 </div>
                 <article class="rightContainer">
                     <header id="profile-header">
@@ -119,19 +117,18 @@
                     <hr>
                     <section id="experiance">
                         <h2>Experience</h2>
-                        <p>I’ve worked on a handful of web projects over the years, [--NAN--  --NAN-- --NAN-- --NAN-- --NAN-- --NAN-- --NAN-- --NAN-- --NAN-- --NAN-- --NAN-- --NAN-- --NAN-- --NAN--]  some of which were for the following organizations:</p>
+                        <p>I’ve worked on a handful of web projects over the years, some of which were for the following organizations:</p>
                         <ul id="companies">
                             <li class="company">
                                 <header>
                                     <h3>Avant Assessment<span>Software Developer</span></h3>
                                     <span class="period">Nov 2022 - Jul 2023</span>
                                 </header>
+                                <hr/>
                                 <p>Creating paths to proficiency with innovative tools and real-world language proficiency tests in over 45 languages. In this position I was regularly testing our applications, identifying and resolving bugs, and collaborating with our development team for effective and timely solutions to meet deadlines.</p>
                                 <ul class="points">
-                                    <li><p>Collaborating with multiple teams and contractors to assist in deciding the direction of our production.</p></li>
-                                    <li><p>Monitoring the progress of several projects while working with other developers to refine code.</p></li>
-                                    <li><p>First-hand involvement in early-stage product testing, debugging, and quality assurance.</p></li>
-                                    <li><p>Documenting a range of potential issues regarding UI, inclusive language, or security holes.</p></li>
+                                    <li><p>Collaborating with other developers on our team, monitoring the progress of several projects and refine code for deployment</p></li>
+                                    <li><p>First-hand experiance in early-stage product testing, debugging, and quality assurance. Documenting a range of potential issues regarding UI, inclusive language, or security holes.</p></li>
                                     <li><p>Daily communication with our Head of Technology to verify our team was on schedule for all major releases and hot fixes.</p></li>
                                 </ul>
                             </li>
@@ -140,44 +137,16 @@
                                     <h3>Prosper IT Consulting<span>Web Developer Intern</span></h3>
                                     <span class="period">Jul 2021 - May 2022</span>
                                 </header>
-                                <p>job description</p>
+                                <hr/>
+                                <p>A team that provides a wide variety of tech services, including custom software development and corporate training.</p>
                                 <ul class="points">
-                                    <li><p></p></li>
-                                    <li><p></p></li>
-                                    <li><p></p></li>
-                                    <li><p></p></li>
-                                    <li><p></p></li>
-                                </ul>
-                            </li>
-                            <li class="company">
-                                <header>
-                                    <h3>name of company<span>job title</span></h3>
-                                    <span class="period"></span>
-                                </header>
-                                <p>job description</p>
-                                <ul class="points">
-                                    <li><p></p></li>
-                                    <li><p></p></li>
-                                    <li><p></p></li>
-                                    <li><p></p></li>
-                                    <li><p></p></li>
-                                </ul>
-                            </li>
-                            <li class="company">
-                                <header>
-                                    <h3>name of company<span>job title</span></h3>
-                                    <span class="period"></span>
-                                </header>
-                                <p>job description</p>
-                                <ul class="points">
-                                    <li><p></p></li>
-                                    <li><p></p></li>
-                                    <li><p></p></li>
-                                    <li><p></p></li>
-                                    <li><p></p></li>
+                                    <li><p>Building custom web pages to meet the specifications of the customer.</p></li>
+                                    <li><p>One on one hands on learning about database structures and calling information from your database</p></li>
+                                    <li><p>Secure coding, ensuring our code was well written and built to elude specific types of malicious attacks or injections</p></li>
                                 </ul>
                             </li>
                         </ul>
+                        <div id="bot-li"></div>
                     </section>
                     <section id="projects">
 
