--- a/playground.html
+++ b/playground.html
@@ -12,7 +12,7 @@
 	</head>
 
 	<body>
-		<div w3-include-html="/src/Injections/test-inject.html"></div>
+		<div id="leftBox-include" w3-include-html="/src/include/leftBox-include.html"></div>
 		<div class="scene">
 			<div class="leftBar previous-button"></div>
 			<div class="carousel" id="carousel-top">
