--- a/index.html
+++ b/index.html
@@ -88,16 +88,16 @@
         <div class="void" id="void">
             <div class="crop">
                 <ul id="card-list" style="--count: 10;">
-                    <li class="cards-all"><div class="card"><img class="imgRotate" src="/images/rotate/BabyMe.png" style="height: 100px; width: 100px;"></a></div></li>
-                    <li class="cards-all"><div class="card"><img class="imgRotate" src="/images/rotate/FamilyPic.png" style="height: 100px; width: 100px;"></a></div></li>
-                    <li class="cards-all"><div class="card"><img class="imgRotate" src="/images/rotate/FlashlightHead.png" style="height: 100px; width: 100px;"></a></div></li>
-                    <li class="cards-all"><div class="card"><img class="imgRotate" src="/images/rotate/GrandpaMeAndDad.png" style="height: 100px; width: 100px;"></a></div></li>
-                    <li class="cards-all"><div class="card"><img class="imgRotate" src="/images/rotate/MeAndDozer.png" style="height: 100px; width: 100px;"></a></div></li>
-                    <li class="cards-all"><div class="card"><img class="imgRotate" src="/images/rotate/MeAndMom.png" style="height: 100px; width: 100px;"></a></div></li>
-                    <li class="cards-all"><div class="card"><img class="imgRotate" src="/images/rotate/MeAndMomWedding.png" style="height: 100px; width: 100px;"></a></div></li>
-                    <li class="cards-all"><div class="card"><img class="imgRotate" src="/images/rotate/MochiSleeping.png" style="height: 100px; width: 100px;"></a></div></li>
-                    <li class="cards-all"><div class="card"><img class="imgRotate" src="/images/rotate/StPaddysDay.png" style="height: 100px; width: 100px;"></a></div></li>
-                    <li class="cards-all"><div class="card"><img class="imgRotate" src="/images/rotate/Veritasium.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/BabyMe.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/FamilyPic.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/FlashlightHead.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/GrandpaMeAndDad.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/MeAndDozer.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/MeAndMom.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/MeAndMomWedding.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/MochiSleeping.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/StPaddysDay.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/Veritasium.png" style="height: 100px; width: 100px;"></a></div></li>
                     <!-- <li class="cards-all"><div class="card"><span class="model-name">Vanilla JavaScript</span><span></span></a></div></li> -->
                     <!-- <li class="cards-all"><div class="card"><span class="model-name">React</span><span>React was one of my first libraries I learned to utilize and it has made my life so much easier.</span></a></div></li> -->
                     <!-- <li class="cards-all"><div class="card"><span class="model-name">Node.js</span><span>Node is one of my go-to frameworks when building my backend and handling requests from the browser</span></a></div></li> -->
