--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Welcome</title>
     <link rel="stylesheet" type="text/css" href="styles/index-master.css">
     <link rel="stylesheet" type="text/css" href="styles/skills-rotate.css">
-    <!-- <link rel="stylesheet" type="text/css" href="styles/background.css"> -->
+    <link rel="stylesheet" type="text/css" href="styles/background.css">
 </head>
 
 <body>
